--- a/lib/src/google-apis/google-apis.html
+++ b/lib/src/google-apis/google-apis.html
@@ -7,9 +7,9 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<!-- Dart note: load polymer for Dart and JS from the same place -->
-<link rel="import" href="../../../../packages/polymer/polymer.html">
-<script>
-// This empty script is here to workaround issue
-// https://github.com/dart-lang/core-elements/issues/11
-</script>
+<!-- Load all Google APIs, for backwards compatibility -->
+<link rel="import" href="google-client-api.html">
+<link rel="import" href="google-jsapi.html">
+<link rel="import" href="google-maps-api.html">
+<link rel="import" href="google-plusone-api.html">
+<link rel="import" href="google-youtube-api.html">
